--- a/package.json
+++ b/package.json
@@ -45,9 +45,12 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.11.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^16.0.1",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "9.8.0",
@@ -55,6 +58,8 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
